--- a/index.html
+++ b/index.html
@@ -275,6 +275,19 @@ crystal spec       # run tests</code></pre>
   </svg>
 </a>License</h2>
 <p>MIT</p>
+<p>Dependencies (bundled single-header/native libraries):</p>
+<ul>
+<li>raudio (C library) – zlib – https://github.com/raysan5/raudio</li>
+<li>miniaudio – Public Domain or MIT-0 – https://github.com/mackron/miniaudio</li>
+<li>dr_wav – Public Domain or MIT-0 – https://github.com/mackron/dr_libs</li>
+<li>dr_mp3 – Public Domain or MIT-0 – https://github.com/mackron/dr_libs</li>
+<li>dr_flac – Public Domain or MIT-0 – https://github.com/mackron/dr_libs</li>
+<li>stb_vorbis – Public Domain or MIT – https://github.com/nothings/stb</li>
+<li>qoa – MIT – https://github.com/phoboslab/qoa</li>
+<li>jar_xm – WTFPL v2 – (included in source) – https://github.com/jarikomppa/jar_xm</li>
+<li>jar_mod – Public Domain (CC0 1.0) – (included in source) – https://github.com/jarikomppa/jar_mod</li>
+</ul>
+<p>All original copyright and license notices are preserved in <code>ext/raudio/src/external/</code>.</p>
 </div>
 </body>
 </html>
