deploy: 74a3f094923bad7229b5446f0fee2dc5b9530c04

--- a/index.html
+++ b/index.html
@@ -277,15 +277,18 @@ crystal spec       # run tests</code></pre>
 <p>MIT</p>
 <p>Dependencies (bundled single-header/native libraries):</p>
 <ul>
-<li>raudio (C library) – zlib – https://github.com/raysan5/raudio</li>
+<li>raudio (C library) – zlib – https://github.com/raysan5/raudio
+<ul>
 <li>miniaudio – Public Domain or MIT-0 – https://github.com/mackron/miniaudio</li>
 <li>dr_wav – Public Domain or MIT-0 – https://github.com/mackron/dr_libs</li>
 <li>dr_mp3 – Public Domain or MIT-0 – https://github.com/mackron/dr_libs</li>
 <li>dr_flac – Public Domain or MIT-0 – https://github.com/mackron/dr_libs</li>
 <li>stb_vorbis – Public Domain or MIT – https://github.com/nothings/stb</li>
 <li>qoa – MIT – https://github.com/phoboslab/qoa</li>
-<li>jar_xm – WTFPL v2 – (included in source) – https://github.com/jarikomppa/jar_xm</li>
-<li>jar_mod – Public Domain (CC0 1.0) – (included in source) – https://github.com/jarikomppa/jar_mod</li>
+<li>jar_xm – WTFPL v2 – (included in source) – https://github.com/kd7tck/jar</li>
+<li>jar_mod – Public Domain (CC0 1.0) – (included in source) – https://github.com/kd7tck/jar</li>
+</ul>
+</li>
 </ul>
 <p>All original copyright and license notices are preserved in <code>ext/raudio/src/external/</code>.</p>
 </div>
