--- a/index.html
+++ b/index.html
@@ -277,16 +277,16 @@ crystal spec       # run tests</code></pre>
 <p>MIT</p>
 <p>Dependencies (bundled single-header/native libraries):</p>
 <ul>
-<li>raudio (C library) – zlib – https://github.com/raysan5/raudio
+<li><a href="https://github.com/raysan5/raudio">raudio</a> (C library) – zlib
 <ul>
-<li>miniaudio – Public Domain or MIT-0 – https://github.com/mackron/miniaudio</li>
-<li>dr_wav – Public Domain or MIT-0 – https://github.com/mackron/dr_libs</li>
-<li>dr_mp3 – Public Domain or MIT-0 – https://github.com/mackron/dr_libs</li>
-<li>dr_flac – Public Domain or MIT-0 – https://github.com/mackron/dr_libs</li>
-<li>stb_vorbis – Public Domain or MIT – https://github.com/nothings/stb</li>
-<li>qoa – MIT – https://github.com/phoboslab/qoa</li>
-<li>jar_xm – WTFPL v2 – (included in source) – https://github.com/kd7tck/jar</li>
-<li>jar_mod – Public Domain (CC0 1.0) – (included in source) – https://github.com/kd7tck/jar</li>
+<li><a href="https://github.com/mackron/miniaudio">miniaudio</a> – Public Domain or MIT-0</li>
+<li><a href="https://github.com/mackron/dr_libs">dr_wav</a> – Public Domain or MIT-0</li>
+<li><a href="https://github.com/mackron/dr_libs">dr_mp3</a> – Public Domain or MIT-0</li>
+<li><a href="https://github.com/mackron/dr_libs">dr_flac</a> – Public Domain or MIT-0</li>
+<li><a href="https://github.com/nothings/stb">stb_vorbis</a> – Public Domain or MIT</li>
+<li><a href="https://github.com/phoboslab/qoa">qoa</a> – MIT</li>
+<li><a href="https://github.com/kd7tck/jar">jar_xm</a> – WTFPL v2 – (included in source)</li>
+<li><a href="https://github.com/kd7tck/jar">jar_mod</a> – Public Domain (CC0 1.0) – (included in source)</li>
 </ul>
 </li>
 </ul>
