deploy: 2dee39cb82bdcc23d090894fcd53fa3999e8b97c

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ crystal spec       # run tests</code></pre>
 </ul>
 </li>
 </ul>
-<p>All original copyright and license notices are preserved in <code>ext/raudio/src/external/</code>.</p>
+<p>Summary: Project code is MIT, bundled raudio is zlib, and all other bundled dependencies are permissive (Public Domain/Unlicense, MIT-0, CC0 1.0, WTFPL v2) with no copyleft obligations.</p>
 </div>
 </body>
 </html>
