deploy: a883b41146f9d38e18819e0ab8f37af306576f6b

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ sound <span class="o">=</span> <span class="t">Raudio</span><span class="t">::</
     <use href="#octicon-link"/>
   </svg>
 </a>Supported formats</h2>
-<p>WAV, OGG, MP3, FLAC, QOA</p>
+<p>WAV, OGG, MP3, FLAC, QOA, XM, MOD</p>
 <h2><a id="api" class="anchor" href="#api">
   <svg class="octicon-link" aria-hidden="true">
     <use href="#octicon-link"/>
@@ -263,12 +263,6 @@ sound <span class="o">=</span> <span class="t">Raudio</span><span class="t">::</
 </a>Development</h2>
 <pre><code class="language-bash">make -C ext        # build native library
 crystal spec       # run tests</code></pre>
-<h2><a id="examples" class="anchor" href="#examples">
-  <svg class="octicon-link" aria-hidden="true">
-    <use href="#octicon-link"/>
-  </svg>
-</a>Examples</h2>
-<p>See <code>examples/</code> directory.</p>
 <h2><a id="license" class="anchor" href="#license">
   <svg class="octicon-link" aria-hidden="true">
     <use href="#octicon-link"/>
