deploy: a49655c272787e606eb2658fd95a9a2ea395d1de

--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
     <use href="#octicon-link"/>
   </svg>
 </a>raudio.cr</h1>
+<p><a href="https://github.com/kojix2/raudio.cr/actions/workflows/ci.yml"><img src="https://github.com/kojix2/raudio.cr/actions/workflows/ci.yml/badge.svg" alt="test" /></a>
+<a href="https://tokei.kojix2.net/github/kojix2/raudio.cr"><img src="https://img.shields.io/endpoint?url=https://tokei.kojix2.net/badge/github/kojix2/raudio.cr/lines" alt="Lines of Code" /></a></p>
 <p>:sound: <a href="https://github.com/raysan5/raudio">raudio</a> - a simple audio library based on miniaudio - for Crystal</p>
 <h2><a id="installation" class="anchor" href="#installation">
   <svg class="octicon-link" aria-hidden="true">
@@ -256,6 +258,7 @@ sound <span class="o">=</span> <span class="t">Raudio</span><span class="t">::</
 <li><code><a href="Raudio/AudioStream.html">Raudio::AudioStream</a></code> - custom streaming</li>
 </ul>
 <p>Low-level C bindings: <code>Raudio::LibRaudio</code></p>
+<p><a href="https://kojix2.github.io/raudio.cr/">API Documentation</a></p>
 <h2><a id="development" class="anchor" href="#development">
   <svg class="octicon-link" aria-hidden="true">
     <use href="#octicon-link"/>
