--- a/index.html
+++ b/index.html
@@ -286,11 +286,11 @@ crystal build examples/simple_sound.cr
 <li><a href="https://github.com/nothings/stb">stb_vorbis</a> – Public Domain or MIT</li>
 <li><a href="https://github.com/phoboslab/qoa">qoa</a> – MIT</li>
 <li><a href="https://github.com/kd7tck/jar">jar_xm</a> – WTFPL v2 – (included in source)</li>
-<li><a href="https://github.com/kd7tck/jar">jar_mod</a> – Public Domain (CC0 1.0) – (included in source)</li>
+<li><a href="https://github.com/kd7tck/jar">jar_mod</a> – WTFPL v2 – (included in source)</li>
 </ul>
 </li>
 </ul>
-<p>Summary: Project code is MIT, bundled raudio is zlib, and all other bundled dependencies are permissive (Public Domain/Unlicense, MIT-0, CC0 1.0, WTFPL v2) with no copyleft obligations.</p>
+<p>Summary: Project code is MIT, bundled raudio is zlib, and all other bundled dependencies are permissive (Public Domain, MIT-0, MIT, WTFPL v2) with no copyleft obligations.</p>
 </div>
 </body>
 </html>
